--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ h1{
 nav{
   display: flex;
   width: 80vw;
-  justify-content: flex-start;
+  justify-content: space-around;
   padding: 1rem;
 }
 
@@ -42,7 +42,7 @@ a:hover{
 
 footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   text-align: center;
   padding: 2rem;
   position: relative;
@@ -59,6 +59,21 @@ footer > img{
 footer > p{
   margin: 0;
   padding-top: 0.7rem;
+}
+.social-media{
+  width: 40px;
+  height: 40px;
+  filter:invert(100%);
+  margin-left: 20px;
+}
+.DH {
+  display: flex;
+}
+
+.DH-img {
+  width: 200px;
+  height: 40px;
+  margin-top: 8px;
 }
 
 form{
@@ -119,4 +134,18 @@ tr:nth-child(even) {
 }
 .dark > a {
   color: white;
+}
+.routesNav{
+  display: flex;
+}
+.dark-button {
+  background-color: #121212;
+  color: white;
+  border: none;
+  padding: 10px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.image-card{
+  max-width: 100%;
 }
